[package]
name = "kitchen-sink"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
parking_lot = "0.12"
serde = {version = "1.0", features = ["derive"] }
tokio = {version = "1.0", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
